--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ ruff = "^0.7.3"
 pylint = "^3.3.1"
 mypy = "^1.13.0"
 bandit = "^1.7.10"
+pytest = "^8.3.3"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
