--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ mypy = "^1.13.0"
 bandit = "^1.7.10"
 pytest = "^8.3.3"
 pytest-cov = "^6.0.0"
+jsonschema = "^4.23.0"
 
 [build-system]
 requires = ["poetry-core"]
