finish all 10 test with a total coverage = 75%

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ package-mode = false
 python = "^3.12"
 sigstore-rekor-types = "^0.0.13"
 requests = "^2.32.3"
+cryptography = "^43.0.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.3"
