--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
+tomli = ">=1.0.0,<2.0.0"
 python = "^3.12"
 sigstore-rekor-types = "^0.0.13"
 requests = "^2.32.3"
