--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,11 @@ cryptography = "^43.0.3"
 [tool.poetry.scripts]
 xichengtong-rekor = "myproject.main:main"
 
+[tool.ruff]
+exclude = [
+    "tests/"
+]
+
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.3"
 pylint = "^3.3.1"
