--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Install Dependencies with Poetry
         run: |
           pip install bandit
+          pip install pylint
           poetry install
 
       # Step 5: Code Formatting Check with Ruff
@@ -41,7 +42,14 @@ jobs:
       - name: Linting with Ruff
         uses: astral-sh/ruff-action@v1
 
+      # Step 7: Pylint Static Analysis
+      - name: Pylint Check
+        run: |
+         pylint $(find . -type f -name "*.py")
+
+
       # Step 7: Run Bandit for Security Analysis
+
       - name: Run Bandit (Security Analysis)
         run: bandit -r . -s B603,B101,B404 
 
