--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,8 +56,9 @@ jobs:
 
       # Step 9: Install Cosign for signing SBOM
       - name: Install Cosign
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/sigstore/cosign/main/install.sh | sh -s -- -b /usr/local/bin
+        uses: sigstore/cosign-installer@v3.7.0
+        with:
+          cosign-release: 'v2.4.1'
 
       # Step 10: Sign SBOM
       - name: Sign SBOM
