--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Install CycloneDX
         run: pip install cyclonedx-bom
 
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3.7.0
+        
       # Step 10: Create Attestation for SBOM
       - name: Create SBOM Attestation
         run: |
