--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -55,11 +55,10 @@ jobs:
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3.7.0
 
-      - name: Create Cosign Key File
-        run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
-        
       # Step 10: Create Attestation for SBOM
       - name: Create SBOM Attestation
+        env:
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_PRIVATE_KEY }}
         run: |
           cosign attest-blob --key cosign.key --type cyclonedx --predicate cyclonedx-sbom.json --bundle sbom-attestation.bundle --output-attestation sbom-attestation.json dist/xichengtong_rekor-3.0-py3-none-any.whl
 
