--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -54,11 +54,14 @@ jobs:
 
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3.7.0
+      
+      - name: generate new key pair.
+        run: cosign generate-key-pair --key cosign.key --no-encrypt
 
       # Step 10: Create Attestation for SBOM
       - name: Create SBOM Attestation
         env:
-          COSIGN_PASSWORD: ${{ secrets.COSIGN_PRIVATE_KEY }}
+         COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         run: |
           cosign attest-blob --key cosign.key --type cyclonedx --predicate cyclonedx-sbom.json --bundle sbom-attestation.bundle --output-attestation sbom-attestation.json dist/xichengtong_rekor-3.0-py3-none-any.whl
 
